--- a/src/components/stickyNotes/sticky.css
+++ b/src/components/stickyNotes/sticky.css
@@ -1,12 +1,3 @@
-.form-wrapper {
-    width: 200px;
-    height: 200px;
-    margin: 0 auto
-}
-.sticky-form {
-    display: flex;
-    flex-direction: column;
-}
 
 textarea {
     font-family: Arial, Helvetica, sans-serif;
@@ -14,8 +5,18 @@ textarea {
     outline: none;
     border: 1px solid lightgray;
 }
-button {
-    background-color: #faed74;
-    border: none;
-    padding: 5px;
+.sticky-canvas {
+    width: 1000px;
+    height: 600px;
+    position: relative;
+    overflow: hidden;
+}
+.delete-zone {
+    position: absolute;
+    width: 300px;
+    height: 200px;
+    bottom: 0;
+    right: 0;
+    background-color: white;
+    padding: 20px 10px
 }
