--- a/src/components/stickyNotes/sticky.css
+++ b/src/components/stickyNotes/sticky.css
@@ -18,5 +18,6 @@ textarea {
     bottom: 0;
     right: 0;
     background-color: white;
-    padding: 20px 10px
+    text-align: center;
+    padding-top: 20px;
 }
